# kakip_ai_apps

./: .gitmodules  README.md
R01_object_detection/src/: CMakeLists.txt  main.cpp
R02_vslam_4cam/: .gitignore  .gitmodules  AIPoC2N  CMakeLists.txt  README.md  install_yolo-planar-slam.sh  make_yolo-planar-slam.sh  protoc-target.sh  test_server.py  toolchain-aarch64.cmake  v2x
R02_vslam_4cam/CAPEAddition/include/: CAPE.h  CylinderSeg.h  Histogram.h  Params.h  PlaneSeg.h
R02_vslam_4cam/CAPEAddition/src/: CAPE.cpp  CylinderSeg.cpp  Histogram.cpp  PlaneSeg.cpp
R02_vslam_4cam/Demo/: README.md  calibrate.cc  calibrate.h  kakip_vslam_demo.cc  kakip_vslam_demo_with_rasp.cc  settings.yaml  settings.yaml.2  settings.yaml.3  settings.yaml.4  settings.yaml.front  settings.yaml.left  settings.yaml.rear  settings.yaml.right  two_cameras.yaml
R02_vslam_4cam/Examples/Calibration/: calibrate_multi.cc  calibrate_single.cc  chessboard.yaml
R02_vslam_4cam/Examples/Monocular/: ELP_rns.yaml  TUM3.yaml
R02_vslam_4cam/Examples/Multicam/: multicam.cc
R02_vslam_4cam/YOLOX_S_dense_640x640_RGB_10271351/: YOLOX_S_dense_640x640_RGB_10271351_addr_map.txt  YOLOX_S_dense_640x640_RGB_10271351_summary.xlsx  addr_map.txt  addr_map.yaml  data_in_list.txt  data_out_list.txt  drp_config.mem  drp_lib_info.txt  drp_param.txt  drp_param_info.txt
R02_vslam_4cam/drp/: util
R02_vslam_4cam/drp/fast/: Makefile  Makefile.board  Makefile.c89  Makefile.conv  README.md  TBin_out.h  board.cpp  convert.cpp  dpi_param.stp3c.txt  dpi_param.stp4c.txt  fast.iws  fast_drp.c  inverse.cpp  reference.c
R02_vslam_4cam/drp/fast/musketeer_fast/: TB_dbinfo.txt  musketeer_fast.ide
R02_vslam_4cam/drp/fast/testbench/crowd-slam/: fast_0004_0_TB_mem_in_csim.txt  fast_0004_0_TB_mem_out_exp.txt
R02_vslam_4cam/drp/fast/testbench/crowd-slam/image_pyramid/: image_pyramid_0004_4.pgm  image_pyramid_0004_5.pgm  image_pyramid_0004_6.pgm
R02_vslam_4cam/drp/fast/testbench/crowd-slam/keypts_to_distribute/: keypts_to_distribute_0004_3.csv  keypts_to_distribute_0004_7.csv
R02_vslam_4cam/drp/fast/testbench/orb-slam2/: fast_0316_0_TB_desc_in_csim.txt  fast_0316_0_TB_mem_in_csim.txt  fast_0316_0_TB_mem_out_exp.txt  fast_0316_1_TB_mem_in_csim.txt  fast_0316_1_TB_mem_out_exp.txt  fast_0316_2_TB_mem_in_csim.txt  fast_0316_2_TB_mem_out_exp.txt  fast_0316_3_TB_mem_in_csim.txt  fast_0316_3_TB_mem_out_exp.txt  fast_0316_4_TB_mem_in_csim.txt  fast_0316_4_TB_mem_out_exp.txt  fast_0316_5_TB_mem_in_csim.txt  fast_0316_5_TB_mem_out_exp.txt  fast_0316_6_TB_mem_in_csim.txt  fast_0316_6_TB_mem_out_exp.txt  fast_0316_7_TB_mem_in_csim.txt  fast_0316_7_TB_mem_out_exp.txt  fast_2849_0_TB_mem_in_csim.txt  fast_2849_0_TB_mem_out_exp.txt  fast_2849_1_TB_mem_in_csim.txt  fast_2849_1_TB_mem_out_sim.txt  fast_2849_2_TB_mem_in_csim.txt  fast_2849_2_TB_mem_out_sim.txt  fast_2849_3_TB_mem_in_csim.txt  fast_2849_3_TB_mem_out_exp.txt  fast_2849_4_TB_mem_in_csim.txt  fast_2849_4_TB_mem_out_sim.txt  fast_2849_5_TB_mem_in_csim.txt  fast_2849_5_TB_mem_out_sim.txt  fast_2849_6_TB_mem_in_csim.txt  fast_2849_6_TB_mem_out_sim.txt  fast_2849_7_TB_mem_in_csim.txt  fast_2849_7_TB_mem_out_sim.txt
R02_vslam_4cam/drp/fast/testbench/orb-slam2/image_pyramid/: image_pyramid_0316_0.pgm  image_pyramid_0316_1.pgm  image_pyramid_0316_2.pgm  image_pyramid_0316_3.pgm  image_pyramid_0316_4.pgm  image_pyramid_0316_5.pgm  image_pyramid_0316_6.pgm  image_pyramid_0316_7.pgm  image_pyramid_2849_0.pgm  image_pyramid_2849_1.pgm  image_pyramid_2849_2.pgm  image_pyramid_2849_3.pgm  image_pyramid_2849_4.pgm  image_pyramid_2849_5.pgm  image_pyramid_2849_6.pgm  image_pyramid_2849_7.pgm
R02_vslam_4cam/drp/fast/testbench/orb-slam2/keypts_to_distribute/: keypts_to_distribute_0316_0.csv  keypts_to_distribute_0316_1.csv  keypts_to_distribute_0316_2.csv  keypts_to_distribute_0316_3.csv  keypts_to_distribute_0316_4.csv  keypts_to_distribute_0316_5.csv  keypts_to_distribute_0316_6.csv  keypts_to_distribute_0316_7.csv  keypts_to_distribute_2849_0.csv  keypts_to_distribute_2849_1.csv  keypts_to_distribute_2849_2.csv  keypts_to_distribute_2849_3.csv  keypts_to_distribute_2849_4.csv  keypts_to_distribute_2849_5.csv  (+2 more)
R02_vslam_4cam/drp_ai_modules/: CMakeLists.txt
R02_vslam_4cam/drp_ai_modules/recognize/yolov2_sp90/: yolov2_sp90_model.cpp  yolov2_sp90_model.h
R02_vslam_4cam/drp_ai_modules/recognize/yolov2_sp90_rgb/: yolov2_sp90_rgb_model.cpp  yolov2_sp90_rgb_model.h
R02_vslam_4cam/drp_modules/: Frame_drp.cc  Frame_drp.h
R02_vslam_4cam/image_load_modules/: D435iCameraImageLoading.cc  D435iCameraImageLoading.h  DatasetImageLoading.cc  DatasetImageLoading.cc.org  DatasetImageLoading.h  ImageLoading.cc  ImageLoading.h  MonocularCameraImageLoading.cc  MonocularCameraImageLoading.cc.org  MonocularCameraImageLoading.h
R02_vslam_4cam/image_proc_modules/: ImageProcessing.cc  ImageProcessing.h
R02_vslam_4cam/include/: CameraInfo.h  Enum.h  Frame.h  FrameDrawer.h  System.h  Tracking.h
R02_vslam_4cam/opencva_modules/: Frame_opencva.cc  Frame_opencva.h
R02_vslam_4cam/script/: drp  run_mono_tum_cpu_vof.sh  run_mono_tum_cpu_von.sh  run_mono_tum_custom_vof.sh  run_mono_tum_custom_von.sh  run_mono_tum_opencva_vof.sh  run_mono_tum_opencva_von.sh  run_mono_usbcam_cpu_von.sh  run_mono_usbcam_custom_von.sh  run_mono_usbcam_opencva_von.sh  run_rgbd_tum_cpu_vof.sh  run_rgbd_tum_cpu_von.sh  run_rgbd_tum_custom_vof.sh  run_rgbd_tum_custom_von.sh  run_rgbd_tum_opencva_vof.sh  run_rgbd_tum_opencva_von.sh  run_setenv_slam.sh  run_viewer.sh  run_vslam.sh  setup.sh
R02_vslam_4cam/socket_modules/: DataSerializer.h  SocketClient.h
R02_vslam_4cam/src/: CameraInfo.cc  Frame.cc  FrameDrawer.cc  System.cc  Tracking.cc
pydrpai/: CMakeLists.txt  README.md  pyproject.toml
pydrpai/src/: MeraDrpRuntimeWrapper.cpp  MeraDrpRuntimeWrapper.h  PreRuntimeV2H.cpp  define.h  dmabuf.h  module.cpp  utils.h
pydrpai/src/pydrpai/: __init__.py  _core.pyi
python/: CMakeLists.txt  README.md
python/packaging/: setup.py
python/src/: PreRuntime.h  dmabuf.cpp  module.cpp  script.py  utils.cpp
python_app/: README.md  main.py  pyproject.toml
(+13 files in other folders)
